Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-59060

KV returns "temp fail" in full eviction for unlock request for a not cached document

    XMLWordPrintable

Details

    • Untriaged
    • 0
    • Unknown
    • KV 2023-4

    Description

      Description Resolution
      When the client sends an unlock request for a document that is not cached in Full Eviction mode, the server returns a "temp fail" error code, even if the document is stored on disk. This causes the client to retry until the operation times out. The metadata of locked documents are kept in the hashtable. The server returns a new "not locked" error code if the document exists, "not found" otherwise.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ashwin.govindarajulu Ashwin Govindarajulu
              pavlos.georgiou Pavlos Georgiou
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty