MB-59060: Check document's existence on disk when unlocking

In full eviction, we were returning temporary_failure if the document
has been evicted.

We use VBucket::getMetaData to fetch from disk, which increments
EPStats::numOpsGetMeta.

Change-Id: If5d17dbcac63bf15edbee9ff12459c79411d43bc
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/199292
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Pavlos Georgiou <pavlos.georgiou@couchbase.com>